--- a/.github/workflows/update-cidr.yaml
+++ b/.github/workflows/update-cidr.yaml
@@ -52,7 +52,7 @@ jobs:
         find . -name "check.py" -type f
         echo "Running script..."
         if [ -f "check.py" ]; then
-          python check.py --countries "$COUNTRIES" --total-cidrs "$TOTAL_CIDRS" --quiet
+          python check.py --countries "$COUNTRIES" --total-cidrs "$TOTAL_CIDRS"
         else
           echo "Error: check.py not found!"
           exit 1
