--- a/.github/workflows/update-cidr.yaml
+++ b/.github/workflows/update-cidr.yaml
@@ -9,11 +9,11 @@ on:
       countries:
         description: 'Comma-separated country codes (e.g., US,GB,DE)'
         required: false
-        default: 'US,GB,DE'
+        default: 'JP,KR,TW,AE,SA,MY'
       total_cidrs:
         description: 'Total number of CIDRs to generate'
         required: false
-        default: '30'
+        default: '10'
 
 permissions:
   contents: write
