--- a/.github/workflows/update-cidr.yaml
+++ b/.github/workflows/update-cidr.yaml
@@ -3,17 +3,17 @@ name: Update Clean CIDRs
 on:
   schedule:
     # Run every 6 hours
-    - cron: '*/10 * * * *'
+    - cron: '*/2 * * * *'
   workflow_dispatch:
     inputs:
       countries:
         description: 'Comma-separated country codes (e.g., US,GB,DE)'
         required: false
-        default: 'JP,KR,TW,AE,SA,MY'
+        default: 'JP,KR,TW,AE,SA,MY,AU,BR,'
       total_cidrs:
         description: 'Total number of CIDRs to generate'
         required: false
-        default: '10'
+        default: '40'
 
 permissions:
   contents: write
