--- a/.github/workflows/update-cidr.yaml
+++ b/.github/workflows/update-cidr.yaml
@@ -9,7 +9,7 @@ on:
       countries:
         description: 'Comma-separated country codes (e.g., US,GB,DE)'
         required: false
-        default: 'JP,KR,TW,AE,SA,MY,AU,BR,'
+        default: 'JP,KR,TW,AE,SA,MY,AU,BR'
       total_cidrs:
         description: 'Total number of CIDRs to generate'
         required: false
@@ -54,7 +54,7 @@ jobs:
         
     - name: Verify files and run script
       env:
-        COUNTRIES: ${{ github.event.inputs.countries || 'US,GB,DE,MY' }}
+        COUNTRIES: ${{ github.event.inputs.countries || 'JP,KR,TW,AE,SA,MY,AU,BR' }}
         TOTAL_CIDRS: ${{ github.event.inputs.total_cidrs || '50' }}
       run: |
         echo "Current directory:"
