Update default countries in update-cidr workflow

--- a/.github/workflows/update-cidr.yaml
+++ b/.github/workflows/update-cidr.yaml
@@ -9,7 +9,7 @@ on:
       countries:
         description: 'Comma-separated country codes (e.g., US,GB,DE)'
         required: false
-        default: 'JP,KR,TW,AE,SA,MY,AU,BR'
+        default: 'JP,KR,TW,SG,SA,MY,AU,NZ'
       total_cidrs:
         description: 'Total number of CIDRs to generate'
         required: false
